--- a/src/app/appliance-cleaning/appliance-cleaning.component.html
+++ b/src/app/appliance-cleaning/appliance-cleaning.component.html
@@ -52,17 +52,16 @@
             <mat-card class="airconcard">
                 <mat-card-content>
                     <img class="airconimg" mat-button (click)="AirconOpen()" mat-card-image
-                        src="../../assets/airconicon.png">
-                    <h1 class="aircontxt" mat-button (click)="AirconOpen()">Aircon</h1>
+                        src="../../assets/airconicon.png" mat-dialog-close>
+                    <h1 class="aircontxt" mat-button (click)="AirconOpen()" mat-dialog-close>Aircon</h1>
                 </mat-card-content>
             </mat-card>
-
 
             <mat-card class="refcard">
                 <mat-card-content>
                     <img class="refimg" mat-button (click)="RefrigeratorOpen()" mat-card-image
-                        src="../../assets/reficon.png">
-                    <h1 class="reftxt" mat-button (click)="RefrigeratorOpen()">Refrigerator</h1>
+                        src="../../assets/reficon.png" mat-dialog-close>
+                    <h1 class="reftxt" mat-button (click)="RefrigeratorOpen()" mat-dialog-close>Refrigerator</h1>
                 </mat-card-content>
             </mat-card>
 
@@ -78,8 +77,8 @@
                 <mat-card-content>
                     <img class="washingimg" mat-button (click)="WashingmachineOpen()" mat-card-image
                         src="../../assets/washingicon.png" mat-dialog-close>
-                    <h1 class="washingtxt" mat-button (click)="WashingmachineOpen()" mat-dialog-close>Washing
-                        Machine</h1>
+                    <h1 class="washingtxt" mat-button (click)="WashingmachineOpen()" mat-dialog-close>Washing Machine
+                    </h1>
                 </mat-card-content>
             </mat-card>
 
