--- a/src/app/bookingsummary/bookingsummary.component.css
+++ b/src/app/bookingsummary/bookingsummary.component.css
@@ -143,7 +143,7 @@
 }
 
 .container{
-  width: 1100px;
+  width: 100%;
   height: fit-content;
   display: flex;
   justify-content: center;
@@ -175,7 +175,6 @@ margin-left: 50px;
   height: fit-content;
   float: left;
   margin: auto;
-  margin-right: 50px;
 }
 .title
 {
