--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -26,146 +26,6 @@
   margin-left: 55px;
 }
 
-.dashtitle
-{
-  color: #003049;
-  font-size: 22px;
-  margin-left: 80px;
-  margin-top: 40px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-}
-
-.services
-{
-  color: #003049;
-  font-size: 16px;
-  margin-left: 80px;
-  margin-top: 20px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.dashvector
-{
-  width: 360px;
-  height: 250px;
-  margin-left: 620px;
-  margin-top: -60px;
-}
-
-.airconcard
-{
-  margin-left: 80px;
-  margin-top: 20px;
-  width: 168px;
-  height: 118px;
-}
-
-.aircon
-{
-  width: 200px;
-  height: 150px;
-}
-
-.aircontxt
-{
-  font-size: 17px;
-  color: #FFFFFF;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin-top: -50px;
-  margin-left: -5px;
-}
-.refcard
-{
-  margin-left: 290px;
-  margin-top: -150px;
-  width: 168px;
-  height: 118px;
-}
-
-.ref
-{
-  width: 200px;
-  height: 150px;
-}
-
-.reftxt
-{
-  font-size: 17px;
-  color: #FFFFFF;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin-top: -50px;
-  margin-left: -5px;
-}
-.fancard
-{
-  margin-left: 500px;
-  margin-top: -150px;
-  width: 168px;
-  height: 118px;
-}
-
-.fan
-{
-  width: 200px;
-  height: 150px;
-}
-
-.fantxt
-{
-  font-size: 17px;
-  color: #FFFFFF;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin-top: -50px;
-  margin-left: -5px;
-}
-.washingcard
-{
-  margin-left: 710px;
-  margin-top: -150px;
-  width: 168px;
-  height: 118px;
-}
-
-.washing
-{
-  width: 200px;
-  height: 150px;
-}
-
-.washingtxt
-{
-  font-size: 17px;
-  color: #FFFFFF;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin-top: -50px;
-  margin-left: -5px;
-}
-
-.tvcard
-{
-  margin-left: 920px;
-  margin-top: -150px;
-  width: 168px;
-  height: 118px;
-}
-
-.tv
-{
-  width: 200px;
-  height: 150px;
-}
-
-.tvtxt
-{
-  font-size: 17px;
-  color: #FFFFFF;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin-top: -50px;
-  margin-left: -5px;
-}
-
-
 .nav-icon{
   color: #003049;
   font-size: 35px;
@@ -248,15 +108,30 @@
 .spacer{
   flex: 1 1 auto;
 }
+.dashtitle
+{
+  color: #003049;
+  font-size: 30px;
+  margin-top: 40px;
+  margin-left: 60px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+.services
+{
+  color: #003049;
+  font-size: 20px;
+  margin-left: 60px;
+  margin-top: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 .datetime
 {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #003049;
+  font-size: 18px;
   float: right;
-  margin-right: 520px;
-  font-size: 15px;
   margin-top: -40px;
-  
 }
 
 .tab{
@@ -276,8 +151,6 @@
 {
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 font-size: 18px;
-float: right;
-margin-right: -150px;
 margin-top: 3px;
 color: #FFFFFF;
 }
@@ -285,9 +158,8 @@ color: #FFFFFF;
 .accounticon
 {
   font-size: 38px;
-  float: right;
-  margin-right: 280px;
   margin-top: -10px;
+  margin-right: 15px;
   color: #FFFFFF;
 }
 
@@ -424,12 +296,35 @@ border-radius: 20px;
   font-size: 10px;
   height: 30px;
 }
-
-table {
-  width: 100%;
-  margin-top: 30px;
-}
 .request{
   padding: 10px;
   font-size: 22px;
+}
+.container{
+  width: fit-content;
+  height: fit-content;
+  float: left;
+}
+.cards{
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+  justify-content: left;
+  margin: auto;
+  margin-left: 50px;
+}
+.card_txt{
+  font-size: 17px;
+  color: black;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
+}
+.card_appliance{
+  width: fit-content;
+  height: fit-content;
+  margin: 5px;
+}
+.card_image{
+  width: 200px;
+  height: 150px;
 }
