--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,137 +1,139 @@
-
-
-  <mat-sidenav-container class="sidenav-container">
-    <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
-      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <br>
-      <img class="logo" mat-card-image src="../../assets/mainlogo.png">
-      <mat-nav-list class="nav-list">
-        <div class="dashboardside">
-          <mat-list-item (click)="closeSideNav()">
-            <mat-icon class="nav-icon" aria-hidden="false" aria-label>dashboard</mat-icon>
-            <a class="dashboard-btn" routerLink="/dashboard">Dashboard</a>
-          </mat-list-item>
-        </div>
-        <div class="bookingside">
-          <mat-list-item (click)="closeSideNav()">
-            <mat-icon class="nav-icon" aria-hidden="false" aria-label="">insert_invitation</mat-icon>
-            <a class="booking-btn" routerLink="/booking">Book a Service</a>
-          </mat-list-item>
-        </div>
-        <div class="profileside">
-          <mat-list-item (click)="closeSideNav()">
-            <mat-icon class="nav-icon" aria-hidden="false" aria-label="">account_circle</mat-icon>
-            <a class="profile-btn" routerLink="/profile">Profile</a>
-          </mat-list-item>
-        </div>
-        <!-- <mat-list-item (click)="closeSideNav()">
+<mat-sidenav-container class="sidenav-container">
+  <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
+    <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
+      *ngIf="isHandset$ | async">
+      <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+    </button>
+    <br>
+    <img class="logo" mat-card-image src="../../assets/mainlogo.png">
+    <mat-nav-list class="nav-list">
+      <div class="dashboardside">
+        <mat-list-item (click)="closeSideNav()">
+          <mat-icon class="nav-icon" aria-hidden="false" aria-label>dashboard</mat-icon>
+          <a class="dashboard-btn" routerLink="/dashboard">Dashboard</a>
+        </mat-list-item>
+      </div>
+      <div class="bookingside">
+        <mat-list-item (click)="closeSideNav()">
+          <mat-icon class="nav-icon" aria-hidden="false" aria-label="">insert_invitation</mat-icon>
+          <a class="booking-btn" routerLink="/booking">Book a Service</a>
+        </mat-list-item>
+      </div>
+      <div class="profileside">
+        <mat-list-item (click)="closeSideNav()">
+          <mat-icon class="nav-icon" aria-hidden="false" aria-label="">account_circle</mat-icon>
+          <a class="profile-btn" routerLink="/profile">Profile</a>
+        </mat-list-item>
+      </div>
+      <!-- <mat-list-item (click)="closeSideNav()">
             <mat-icon class="nav-icon" aria-hidden="false" aria-label="">credit_card</mat-icon>
             <a class="nav-btn" routerLink="/payment">Payment</a>
           </mat-list-item> -->
-  
-      </mat-nav-list>
-  
-    </mat-sidenav>
 
-    <mat-sidenav-content>
-      <mat-toolbar>
+    </mat-nav-list>
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+    <mat-toolbar>
       <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-        <h1 class="ayosgamit">Ayosgamit</h1>
-        <span class="spacer"></span>
-        <h2 class="welcome">Welcome, {{user_fname}}!</h2>
-         <mat-icon class="accounticon" aria-hidden="false" aria-label="">account_circle</mat-icon>
-        <button class="logoutBtn" (click)="signOut()" mat-button>
-          
-          <mat-icon class="logouticon">exit_to_app<h1 class="logoutxt">Logout</h1></mat-icon>
-          
-        </button>
+      <h1 class="ayosgamit">Ayosgamit</h1>
+      <span class="spacer"></span>
+      <mat-icon class="accounticon" aria-hidden="false" aria-label="">account_circle</mat-icon>
+      <h2 class="welcome">Welcome, {{user_fname}}!</h2>
+      <button class="logoutBtn" (click)="signOut()" mat-button>
+        <mat-icon class="logouticon">exit_to_app<h1 class="logoutxt">Logout</h1>
+        </mat-icon>
+      </button>
     </mat-toolbar>
 
-    <div>
-      <h1 class= "dashtitle">Dashboard</h1>   
-    </div>
-    
-    <div class="datetime">
-      <label>{{date   | date: "MMMM dd, yyyy  "}}</label>
-      <label>({{date   | date: "h:mm:a'"}})</label>
-     </div>
-     
-    <div>
-      <h1 class= "services">Services Offered</h1>   
-    </div>
+    <div class="container">
 
-    <div>
-    <mat-card class="airconcard">
-      <img class="aircon" mat-card-image src="../../assets/aircon cleaning.jpg">
-      <h1 class="aircontxt">Air Conditioner</h1>
-     
-    </mat-card>
+      <div>
+        <h1 class="dashtitle">Dashboard</h1>
+      </div>
 
-    <mat-card class="refcard">
-      <img class="ref" mat-card-image src="../../assets/ref repair.jpg">
-      <h1 class="reftxt">Refigerator</h1>
-    </mat-card>
+      <div class="datetime">
+        <label>{{date | date: "MMMM dd, yyyy "}}</label>
+        <label>({{date | date: "h:mm:a'"}})</label>
+      </div>
 
-    <mat-card class="fancard">
-      <img class="fan" mat-card-image src="../../assets/fan repair.jpg">
-      <h1 class="fantxt">Electric Fans</h1>
-    </mat-card>
+      <div>
+        <h1 class="services">Services Offered</h1>
+      </div>
 
-    <mat-card class="washingcard">
-      <img class="washing" mat-card-image src="../../assets/washing.jpg">
-      <h1 class="washingtxt">Washing Machine</h1>
-    </mat-card>
+      <div class="cards">
+        <mat-card class="card_appliance">
+          <img class="card_image" mat-card-image src="../../assets/aircon cleaning.jpg">
+          <h1 class="card_txt">Air Conditioner</h1>
+        </mat-card>
 
-    <mat-card class="tvcard">
-      <img class="tv" mat-card-image src="../../assets/tv repair.jpg">
-      <h1 class="tvtxt">Television</h1>
-    </mat-card>
+        <mat-card class="card_appliance">
+          <img class="card_image" mat-card-image src="../../assets/ref repair.jpg">
+          <h1 class="card_txt">Refigerator</h1>
+        </mat-card>
+
+        <mat-card class="card_appliance">
+          <img class="card_image" mat-card-image src="../../assets/fan repair.jpg">
+          <h1 class="card_txt">Electric Fans</h1>
+        </mat-card>
+
+        <mat-card class="card_appliance">
+          <img class="card_image" mat-card-image src="../../assets/washing.jpg">
+          <h1 class="card_txt">Washing Machine</h1>
+        </mat-card>
+
+        <mat-card class="card_appliance">
+          <img class="card_image" mat-card-image src="../../assets/tv repair.jpg">
+          <h1 class="card_txt">Television</h1>
+        </mat-card>
+
+      </div>
+
+      <mat-tab-group class="tab">
+        <mat-tab label="Pending Requests">
+          <mat-card class="pendingcard">
+            <h2 class="request">Pending Requests</h2>
+            <mat-form-field class="searchfield" appearance="outline">
+              <mat-label>
+                <mat-icon>find_in_page</mat-icon>Search..
+              </mat-label>
+              <input matInput>
+            </mat-form-field>
+          </mat-card>
+        </mat-tab>
+
+        <mat-tab label="Completed Requests">
+          <mat-card class="pendingcard">
+            <h2 class="request">Pending Requests</h2>
+            <mat-form-field class="searchfield" appearance="outline">
+              <mat-label>
+                <mat-icon>find_in_page</mat-icon>Search..
+              </mat-label>
+              <input matInput>
+            </mat-form-field>
+
+          </mat-card>
+        </mat-tab>
+
+        <mat-tab label="Cancelled Requests">
+          <mat-card class="pendingcard">
+            <h2 class="request">Pending Requests</h2>
+            <mat-form-field class="searchfield" appearance="outline">
+              <mat-label>
+                <mat-icon>find_in_page</mat-icon>Search..
+              </mat-label>
+              <input matInput>
+            </mat-form-field>
+
+          </mat-card>
+        </mat-tab>
+    </mat-tab-group>
 
   </div>
 
-    
-   
-    <mat-tab-group class="tab">
-
-      <mat-tab label="Pending Requests">  
-        <mat-card class="pendingcard">
-            <h2 class="request">Pending Requests</h2>
-            <mat-form-field class="searchfield" appearance="outline">
-              <mat-label><mat-icon>find_in_page</mat-icon>Search..</mat-label>
-              <input matInput>
-            </mat-form-field>
-        </mat-card>
-      </mat-tab>
-
-      <mat-tab label="Completed Requests">  
-        <mat-card class="pendingcard">
-            <h2 class="request">Pending Requests</h2>
-            <mat-form-field class="searchfield" appearance="outline">
-              <mat-label><mat-icon>find_in_page</mat-icon>Search..</mat-label>
-              <input matInput>
-            </mat-form-field>
-           
-        </mat-card>
-      </mat-tab>
-
-      <mat-tab label="Cancelled Requests">  
-        <mat-card class="pendingcard">
-            <h2 class="request">Pending Requests</h2>
-            <mat-form-field class="searchfield" appearance="outline">
-              <mat-label><mat-icon>find_in_page</mat-icon>Search..</mat-label>
-              <input matInput>
-            </mat-form-field>
-           
-        </mat-card>
-      </mat-tab>
-
-      </mat-tab-group>
-
-      
+  </mat-sidenav-content>
+</mat-sidenav-container>
