--- a/src/app/washingmachinedetails/washingmachinedetails.component.html
+++ b/src/app/washingmachinedetails/washingmachinedetails.component.html
@@ -90,11 +90,11 @@
                 </mat-form-field>
               </div>
             </mat-card>
-            <div>
+            <!-- <div>
               <button class="addunit" mat-stroked-button>
                 <mat-icon>add_box</mat-icon>Add unit
               </button>
-            </div>
+            </div> -->
             <!--Back and Next Button-->
             <button class="nextBtn" type="submit" [disabled]="!unitdetailsForm.valid" mat-button
               matStepperNext>Next</button><br><br><br><br>
