--- a/src/app/washingmachinedetails/washingmachinedetails.component.html
+++ b/src/app/washingmachinedetails/washingmachinedetails.component.html
@@ -307,7 +307,7 @@
                   <input matInput formControlName="service_instruction" [errorStateMatcher]="matcher"
                     placeholder="Any instruction to the technician?" autocomplete="off">
                   <mat-error *ngIf="contactDetialsForm.get('service_instruction').hasError('required')">
-                    Landmark,
+                    Any instructions?
                   </mat-error>
                 </mat-form-field>
               </div>
