--- a/src/app/washingmachinedetails/washingmachinedetails.component.html
+++ b/src/app/washingmachinedetails/washingmachinedetails.component.html
@@ -247,12 +247,12 @@
               </div>
               <!--Booking checkboxes-->
               <div class="checkbox">
-                <h1 class="h1cb">Booking for yourself?</h1>
+                <!-- <h1 class="h1cb">Booking for yourself?</h1>
 
                 <section class="example-section">
                   <mat-checkbox class="cbYes">Yes</mat-checkbox>
                   <mat-checkbox class="cbNo">No</mat-checkbox>
-                </section>
+                </section> -->
 
                 <mat-form-field class="fname" appearance="outline">
                   <mat-label>First Name</mat-label>
