--- a/src/app/addtech/addtech.component.css
+++ b/src/app/addtech/addtech.component.css
@@ -1,38 +1,137 @@
+.sidenav-container {
+    height: 100%;
+  }
+  
+  .sidenav{
+    width: fit-content;
+    width: 280px;
+    background-color: #EAE2B7;
+  }
+  
+  .mat-sidenav-content{
+     height: 910px;
+     background-color: white;
+  }
+  
+  .mat-toolbar{
+    background-color: #D62828;
+    width: 100%;
+  }
+  
+  .logo{
+    width: 180px;
+    height: 150px;
+    padding-top: 40px;
+    margin-left: 55px;
+  }
+  
+  .nav-icon{
+    color: #003049;
+    font-size: 35px;
+    margin-left: 25px;
+    margin-top: -12px;
+  }
+  
+  .dashboardside{
+    margin-left: 0px;
+    margin-top: 30px;
+    text-align: justify;
+  }
+  
+  .dashboardside:hover
+  {
+      background-color: #c8c19c;
+      width: 100%;
+      height: 70px;
+      margin-left: 0;
+      margin-top: 20px;
+      text-align: justify;
+  }
+  
+  .dashboard-btn{
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    margin-left: 25px;
+    text-decoration: none;
+  }
+  
+  .bookingside{
+    margin-left: 0px;
+    margin-top: 30px;
+    text-align: justify;
+  }
+  
+  .bookingside:hover
+  {
+      background-color: #c8c19c;
+      width: 100%;
+      height: 70px;
+      margin-left: 0;
+      margin-top: 20px;
+      text-align: justify;
+  }
+  
+  .booking-btn{
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    margin-left: 25px;
+  }
+  
+  .profileside{
+    margin-left: 0px;
+    margin-top: 30px;
+    text-align: justify;
+  }
+  
+  .profileside:hover
+  {
+      background-color: #c8c19c;
+      
+      width: 100%;
+      height: 70px;
+      margin-left: 0;
+      margin-top: 20px;
+      text-align: justify;
+  }
+  
+  .profile-btn
+  {
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    margin-left: 25px;
+  }
+  .spacer{
+    flex: 1 1 auto;
+  }
+  .ayosgamit
+  {
+    font-family: 'Candara';
+    font-size: 30px;
+    margin-left: 10px;
+    color: #FFFFFF;
+  }
 .mat-dialog-content
 {
-    width: 500px;
-    height: 500px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
 }
 
 .title
 {
     color: #003049;
     font-family: 'Trebuchet MS';
-    font-size: 20px;
+    font-size: 30px;
     margin-left: 10px;
     margin-top: 15px;
 }
-
-.name
-{
-    margin-top: 40px;
+.textfield{
+    margin-top: 10px;
+    width: 350px;
 }
-
-.specialization
-{
-    margin-top: -5px;
-}
-
-.contact
-{
-    margin-top: -15px;
-}
-
-.address
-{
-    margin-top: 5px;
-}
-
 .addBtn
 {
     width: 85px;
@@ -41,6 +140,21 @@
     font-size: 15px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     float: right;
-    margin-right: 30px;
     margin-top: 10px;
+}
+.card{
+    width: 500px;
+    height: fit-content;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.container{
+    width: fit-content;
+    height: auto;
+    margin: auto;
+}
+.form-group{
+    text-align: left;
 }
