--- a/src/app/adminpage/adminpage.component.css
+++ b/src/app/adminpage/adminpage.component.css
@@ -1,180 +1,136 @@
-.example-container {
-  max-width: 100%;
-  min-height: 910px;
-  margin-top: 10px;
-  margin-left: 0;
-  border: 1px solid #E5E5E5;
-  border-radius: 30px;
+.sidenav-container {
+  height: 100%;
 }
 
-.mat-drawer
-{
-width: 280px;
-background-color: #EAE2B7;
+.sidenav{
+  width: fit-content;
+  width: 280px;
+  background-color: #EAE2B7;
 }
 
-.toolbar
-  {
-    background-color: #D62828;
-    margin-top: -20px;
-  }
-
-.logotxt
-  {
-    font-family: Candara;
-    font-style: bold;
-    font-size: 30px;
-    color: #FFFFFF;
-    padding-top: 5px;
-    margin-left: 5px;
-  }
-
-  .inboxicon
-  {
-    font-size: 30px;
-    color: white;
-    float: right;
-    margin-right: 160px;
-    margin-top: 10px;
-  }
-  
-  .logouticon
-  {
-    font-size: 30px;
-    color: #FFFFFF;
-    margin-left: 1200px;
-    margin-top: 10px;
-  }
-
-.mat-drawer-content
-{
-height: 910px;
-background-color: #FFFFFF;
+.mat-sidenav-content{
+   height: 910px;
+   background-color: white;
 }
 
-.logo
-{
-  width: 170px;
+.mat-toolbar{
+  background-color: #D62828;
+  width: 100%;
+}
+
+.logo{
+  width: 180px;
   height: 150px;
   padding-top: 40px;
-  margin-left: 60px;
+  margin-left: 55px;
 }
 
-.dashboardside
-{
-margin-left: 0px;
-margin-top: 50px;
-text-align: justify;
+.nav-icon{
+  color: #003049;
+  font-size: 35px;
+  margin-left: 25px;
+  margin-top: -12px;
+}
+
+.dashboardside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
 }
 
 .dashboardside:hover
 {
     background-color: #c8c19c;
-    
-    align-self: auto;
     width: 100%;
     height: 70px;
     margin-left: 0;
-    margin-top: 50px;
+    margin-top: 20px;
     text-align: justify;
-    
 }
 
-.dashlink
+.dashboard-btn{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+  text-decoration: none;
+}
+
+.bookingside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.bookingside:hover
 {
-color: #003049;
+    background-color: #c8c19c;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.booking-btn{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+}
+
+.profileside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.profileside:hover
+{
+    background-color: #c8c19c;
+    
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.profile-btn
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+}
+.spacer{
+  flex: 1 1 auto;
+}
+.ayosgamit
+{
+  font-family: 'Candara';
+  font-size: 30px;
+  margin-left: 10px;
+  color: #FFFFFF;
+}
+.welcome
+{
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 font-size: 18px;
-margin-left: 55px;
-text-decoration: none;
-margin-top: -33px;
+margin-top: 3px;
+color: #FFFFFF;
 }
-
-.homeicon
+.accounticon
 {
-  color: #003049;
-  font-size: 35px;
-  padding-top: 20px;
-  margin-left: 55px;
+  font-size: 38px;
+  margin-top: -10px;
+  margin-right: 15px;
+  color: #FFFFFF;
 }
-
-.workerside
-{
-  margin-left: 0px;
-  margin-top: 20px;
-  text-align: justify;
-}
-
-.workerside:hover
-{
-    background-color: #c8c19c;
-    width: 100%;
-    height: 70px;
-    margin-left: 0;
-    margin-top: 20px;
-    
-}
-
-.workerlink
-{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 55px;
-  text-decoration: none;
-  margin-top: -34px;
-}
-
-.workericon
-{
-  color: #003049;
-  font-size: 35px;
-  margin-top: 20px;
-  margin-left: 55px;
-}
-
-   
-.scheduleside
-{
-  margin-left: 0px;
-  margin-top: 20px;
-  text-align: justify;
-
-}
-
-.scheduleside:hover
-{
-    background-color: #c8c19c;
-    width: 100%;
-    height: 70px;
-    margin-left: 0;
-    margin-top: 20px;
-    
-}
-.scheduleicon
-{
-  color: #003049;
-  font-size: 35px;
-  margin-top: 20px;
-  margin-left: 55px;
-}
-
-.schedulelink
-{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 55px;
-  text-decoration: none;
-  margin-top: -34px;
-}
-
  .newreqcard
  {
   width: 280px;
   height: 40px;
-  margin-left: 80px;
-  margin-top: 100px;
  }
 
  .newreqtxt
@@ -205,8 +161,6 @@ margin-top: -33px;
  {
   width: 280px;
   height: 40px;
-  margin-left: 80px;
-  margin-top: 20px;
  }
 
  .completedtxt
@@ -237,8 +191,6 @@ margin-top: -33px;
  {
   width: 280px;
   height: 40px;
-  margin-left: 410px;
-  margin-top: -164px;
  }
 
  .pendingtxt
@@ -269,8 +221,6 @@ margin-top: -33px;
  {
     width: 280px;
     height: 40px;
-    margin-left: 410px;
-    margin-top: 19px;
  }
 
  .cancelledtxt
@@ -301,8 +251,6 @@ margin-top: -33px;
  {
     width: 280px;
     height: 40px;
-    margin-left: 740px;
-    margin-top: -163px;
  }
 
  .reschedtxt
@@ -333,8 +281,6 @@ margin-top: -33px;
  {
     width: 280px;
     height: 40px;
-    margin-left: 740px;
-    margin-top: 19px;
  }
 
  .workertxt
@@ -363,8 +309,8 @@ margin-top: -33px;
 
  .mat-tab-group
  {
-    width: 1350px;
-    margin-top: 60px;
+    width: fit-content;
+    margin-top: 100px;
     margin-left: 50px;
  }
 
@@ -456,59 +402,3 @@ margin-top: -33px;
   font-family: 'Trebuchet MS';
   margin-left: 10px;
 }
-
-.serviceid
-{
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 13px;
-    color: #14213D;
-    margin-top: 50px;
-    margin-left: 10px;
-}
-
-.name
-{
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 13px;
-    color: #14213D;
-    margin-top: -25px;
-    margin-left: 180px;
-}
-
-.appdate
-{
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 13px;
-    color: #14213D;
-    margin-top: -25px;
-    margin-left: 380px;
-}
-
-.time
-{
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 13px;
-    color: #14213D;
-    margin-top: -25px;
-    margin-left: 580px;
-}
-
-.address
-{
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 13px;
-    color: #14213D;
-    margin-top: -25px;
-    margin-left: 750px;
-}
-
-.dateapp
-{
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 13px;
-    color: #14213D;
-    margin-top: -25px;
-    margin-left: 980px;
-}
-
-
