--- a/src/app/technicians/technicians.component.css
+++ b/src/app/technicians/technicians.component.css
@@ -1,180 +1,145 @@
-.example-container {
-    max-width: 100%;
-    min-height: 910px;
-    margin-top: 10px;
-    margin-left: 0;
-    border: 1px solid #E5E5E5;
-    border-radius: 30px;
-  }
-  
-  .mat-drawer
-  {
+.sidenav-container {
+  height: 100%;
+}
+
+.sidenav{
+  width: fit-content;
   width: 280px;
   background-color: #EAE2B7;
-  }
-  
-  .toolbar
-    {
-      background-color: #D62828;
-      margin-top: -20px;
-    }
-  
-  .logotxt
-    {
-      font-family: Candara;
-      font-style: bold;
-      font-size: 30px;
-      color: #FFFFFF;
-      padding-top: 5px;
-      margin-left: 5px;
-    }
-  
-    .inboxicon
-    {
-      font-size: 30px;
-      color: white;
-      float: right;
-      margin-right: 160px;
-      margin-top: 10px;
-    }
-    
-    .logouticon
-    {
-      font-size: 30px;
-      color: #FFFFFF;
-      margin-left: 1200px;
-      margin-top: 10px;
-    }
-  
-  .mat-drawer-content
-  {
-  height: 910px;
-  background-color: #FFFFFF;
-  }
-  
-  .logo
-  {
-    width: 170px;
-    height: 150px;
-    padding-top: 40px;
-    margin-left: 60px;
-  }
-  
-  .dashboardside
-  {
+}
+
+.mat-sidenav-content{
+   height: 910px;
+   background-color: white;
+}
+
+.mat-toolbar{
+  background-color: #D62828;
+  width: 100%;
+}
+
+.logo{
+  width: 180px;
+  height: 150px;
+  padding-top: 40px;
+  margin-left: 55px;
+}
+
+.nav-icon{
+  color: #003049;
+  font-size: 35px;
+  margin-left: 25px;
+  margin-top: -12px;
+}
+
+.dashboardside{
   margin-left: 0px;
-  margin-top: 50px;
+  margin-top: 30px;
   text-align: justify;
-  }
-  
-  .dashboardside:hover
-  {
-      background-color: #c8c19c;
-      
-      align-self: auto;
-      width: 100%;
-      height: 70px;
-      margin-left: 0;
-      margin-top: 50px;
-      text-align: justify;
-      
-  }
-  
-  .dashlink
-  {
+}
+
+.dashboardside:hover
+{
+    background-color: #c8c19c;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.dashboard-btn{
   color: #003049;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
-  margin-left: 55px;
+  margin-left: 25px;
   text-decoration: none;
-  margin-top: -33px;
-  }
-  
-  .homeicon
-  {
-    color: #003049;
-    font-size: 35px;
-    padding-top: 20px;
-    margin-left: 55px;
-  }
-  
-  .workerside
-  {
-    margin-left: 0px;
-    margin-top: 20px;
-    text-align: justify;
-  }
-  
-  .workerside:hover
-  {
-      background-color: #c8c19c;
-      width: 100%;
-      height: 70px;
-      margin-left: 0;
-      margin-top: 20px;
-      
-  }
-  
-  .workerlink
-  {
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-left: 55px;
-    text-decoration: none;
-    margin-top: -34px;
-  }
-  
-  .workericon
-  {
-    color: #003049;
-    font-size: 35px;
-    margin-top: 20px;
-    margin-left: 55px;
-  }
-  
-     
-  .scheduleside
-  {
-    margin-left: 0px;
-    margin-top: 20px;
-    text-align: justify;
-  
-  }
-  
-  .scheduleside:hover
-  {
-      background-color: #c8c19c;
-      width: 100%;
-      height: 70px;
-      margin-left: 0;
-      margin-top: 20px;
-      
-  }
-  .scheduleicon
-  {
-    color: #003049;
-    font-size: 35px;
-    margin-top: 20px;
-    margin-left: 55px;
-  }
-  
-  .schedulelink
-  {
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-left: 55px;
-    text-decoration: none;
-    margin-top: -34px;
-  }
+}
 
-  .mat-form-field
+.bookingside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.bookingside:hover
+{
+    background-color: #c8c19c;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.booking-btn{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+}
+
+.profileside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.profileside:hover
+{
+    background-color: #c8c19c;
+    
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.profile-btn
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+}
+.spacer{
+  flex: 1 1 auto;
+}
+.ayosgamit
+{
+  font-family: 'Candara';
+  font-size: 30px;
+  margin-left: 10px;
+  color: #FFFFFF;
+}
+.welcome
+{
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-size: 18px;
+margin-top: 3px;
+color: #FFFFFF;
+}
+.accounticon
+{
+  font-size: 38px;
+  margin-top: -10px;
+  margin-right: 15px;
+  color: #FFFFFF;
+}
+.content{
+  margin: auto;
+}
+.content1{
+  margin: auto;
+}
+
+  .searchfield
   {
       width: 250px;
       height: 10px;
-      margin-left: 445px;
       margin-top: 20px;
+      float: right;
   }
 
 
@@ -205,8 +170,8 @@
 
 .technician1
 {
-width: 700px;
-height: 40px;
+width: 650px;
+height: fit-content;
 margin-left: 80px;
 margin-top: 50px;
 border: 2px;
@@ -253,9 +218,6 @@ border: 2px;
 
 .editBtn1
 {
-    
     float: right;
     margin-right: -190px;
-   
- 
 }
