--- a/src/app/technicians/technicians.component.html
+++ b/src/app/technicians/technicians.component.html
@@ -1,97 +1,98 @@
-<html>
-  <body>
-    <div class="dashboard">
-      <mat-drawer-container class="example-container">
-        <mat-drawer mode="side" opened>
-          <img class="logo" mat-card-image src="../../assets/mainlogo.png">
-      
-        <div class="dashboardside">
-          <div>
-            <mat-icon class="homeicon" aria-hidden="false" aria-label>dashboard</mat-icon>
-          </div>
+<mat-sidenav-container class="sidenav-container">
+  <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
+    <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
+      *ngIf="isHandset$ | async">
+      <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+    </button>
+    <br>
+    <img class="logo" mat-card-image src="../../assets/mainlogo.png">
+    <mat-nav-list class="nav-list">
+      <div class="dashboardside">
+        <mat-list-item (click)="closeSideNav()">
+          <mat-icon class="nav-icon" aria-hidden="false" aria-label>dashboard</mat-icon>
+          <a class="dashboard-btn" routerLink="/admin">Dashboard</a>
+        </mat-list-item>
+      </div>
+      <div class="bookingside">
+        <mat-list-item (click)="closeSideNav()">
+          <mat-icon class="nav-icon" aria-hidden="false" aria-label="">face</mat-icon>
+          <a class="booking-btn" routerLink="/technicians">Technicians</a>
+        </mat-list-item>
+      </div>
+      <div class="profileside">
+        <mat-list-item (click)="closeSideNav()">
+          <mat-icon class="nav-icon" aria-hidden="false" aria-label="">schedule</mat-icon>
+          <a class="profile-btn" routerLink="/admin">Schedule</a>
+        </mat-list-item>
+      </div>
+      <!-- <mat-list-item (click)="closeSideNav()">
+                <mat-icon class="nav-icon" aria-hidden="false" aria-label="">credit_card</mat-icon>
+                <a class="nav-btn" routerLink="/payment">Payment</a>
+              </mat-list-item> -->
 
-          <div class="dashlink">
-            <a class="dashlink" routerLink="/admin">Dashboard</a>
-          </div>
-       </div>  
+    </mat-nav-list>
+  </mat-sidenav>
 
-        <div class="workerside">
-          <div>
-            <mat-icon class="workericon" aria-hidden="false" aria-label="">face</mat-icon>
-          </div>
+  <mat-sidenav-content>
+    <mat-toolbar>
+      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
+        *ngIf="isHandset$ | async">
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+      </button>
+      <h1 class="ayosgamit">Ayosgamit</h1>
+      <span class="spacer"></span>
+      <mat-icon class="accounticon" aria-hidden="false" aria-label="">account_circle</mat-icon>
+      <h2 class="welcome">Welcome, ADMIN!</h2>
+    </mat-toolbar>
+    <div class="content">
+      <h1 class="titletxt">Technicians</h1>
+      <!-- <img class="techicon" mat-card-image src="../../assets/techicon.png"> -->
 
-          <div class="workerlink">
-            <a class="workerlink" routerLink="/bookingform">Technicians</a>
-          </div>
-        </div> 
+      <button mat-icon-button class="addtech" (click)="AddtechOpenDialog()"
+        aria-label="Example icon button with a home icon">
+        <mat-icon>add</mat-icon>
+      </button>
+      <div class="content1">
 
-        <div class="scheduleside">
-          <div>
-            <mat-icon class="scheduleicon" aria-hidden="false" aria-label="">schedule</mat-icon>
-          </div>
+        <!-- <mat-form-field class="searchfield" appearance="outline">
+          <mat-label>
+            <mat-icon>find_in_page</mat-icon> Search..
+          </mat-label>
+          <input matInput>
+        </mat-form-field> -->
 
-          <div class="schedulelink">
-            <a class="schedulelink" routerLink="/bookingform">Schedules</a>
-          </div>
-        </div>
-      </mat-drawer>
-
-    <mat-drawer-content>
-      <p>
-        <mat-toolbar class="toolbar">
-          <h1 class="logotxt"><b>Ayosgamit</b></h1>
-          <div>
-            <mat-icon class="inboxicon" matBadge="15" matBadgeColor="warn">inbox</mat-icon>
-              <mat-icon class="logouticon" aria-hidden="false" aria-label="">power_settings_new</mat-icon>
-           </div>
-        </mat-toolbar>
-      </p>
-
-    <div>
-        <h1 class="titletxt">Technicians</h1>
-        <img class="techicon" mat-card-image src="../../assets/techicon.png">
-
-        <button mat-icon-button class="addtech" (click)="AddtechOpenDialog()" aria-label="Example icon button with a home icon">
-            <mat-icon>add</mat-icon>
-          </button>
-
-            <mat-form-field class="searchfield" appearance="outline">
-                <mat-label><mat-icon>find_in_page</mat-icon> Search..</mat-label>
-                    <input matInput>
-            </mat-form-field>
-        
         <mat-card class="technician1">
-            <div>
+          <div>
+            <button mat-stroked-button class="statusBtn1" [matMenuTriggerFor]="statusmenu">Status</button>
+            <mat-menu #statusmenu="matMenu">
+              <button mat-menu-item>Active</button>
+              <button mat-menu-item>Inactive</button>
+            </mat-menu>
+            <button mat-flat-button class="profileBtn1" (click)="TechprofileOpenDialog()">Profile</button>
 
-                <button mat-stroked-button class="statusBtn1" [matMenuTriggerFor]="statusmenu">Status</button>
-                    <mat-menu #statusmenu="matMenu">
-                        <button mat-menu-item>Active</button>
-                        <button mat-menu-item>Inactive</button>
-                    </mat-menu>
-                <button mat-flat-button class="profileBtn1" (click)="TechprofileOpenDialog()">Profile</button>
+            <button mat-icon-button class="editBtn1" [matMenuTriggerFor]="editmenu">
+              <mat-icon>more_vert</mat-icon>
+            </button>
 
-                <button mat-icon-button class="editBtn1" [matMenuTriggerFor]="editmenu">
-                    <mat-icon>more_vert</mat-icon>
-                </button>
-
-                <mat-menu #editmenu="matMenu">
-                    <button mat-menu-item>
-                      <mat-icon>edit</mat-icon>
-                      <span>Edit</span>
-                    </button>
-
-                    <button mat-menu-item>
-                      <mat-icon>delete</mat-icon>
-                      <span>Delete</span>
-                    </button>
-                    
-                </mat-menu>
-            </div>
-            
-            <div>
+            <mat-menu #editmenu="matMenu">
+              <button mat-menu-item>
+                <mat-icon>edit</mat-icon>
+                <span>Edit</span>
+              </button>
+              <button mat-menu-item>
+                <mat-icon>delete</mat-icon>
+                <span>Delete</span>
+              </button>
+            </mat-menu>
+          </div>
+          <div>
             <h1 class="name1">Juan Dela Cruz</h1>
-                <h2 class="position1">Appliances Repair</h2>
-            </div>
+            <h2 class="position1">Appliances Repair</h2>
+          </div>
 
         </mat-card>
+      </div>
     </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
